--- a/about/index.html
+++ b/about/index.html
@@ -7,8 +7,8 @@ title: about
 
   <section class="herounit">
     <div class="container">
-      <h1 class="h1 herounit__headline">About</h1>
-      <h1 class="herounit__subhead"><span class="slabtext">Manifesto &bull; Policies &amp; Terms &bull; Contact</span></h1>
+      <h1 class="h1 herounit__headline">We Dun It</h1>
+      <h1 class="herounit__subhead"><span class="slabtext">About &bull; Manifesto &bull; Policies &amp; Terms &bull; Contact</span></h1>
       <!-- <i class="fa fa-arrow-circle-down fa-3x"></i> -->
       </div> <!-- end div container -->
   </section> <!-- end section herounit -->
