--- a/short-stories/index.html
+++ b/short-stories/index.html
@@ -7,7 +7,7 @@ title: short-stories
 
   <section class="herounit">
     <div class="container">
-      <h1 class="h1 herounit__headline">Short Stories</h1>
+      <h1 class="h1 herounit__headline"><span class="slabtext">The Blotter</span>(Short Stories)</h1>
       <!-- <p class="herounit__subhead">Read something short.</p> -->
       <!-- <h1 class="herounit__subhead">&lsaquo;&lsaquo;&lsaquo;&nbsp;Read&nbsp;something&nbsp;short&nbsp;&rsaquo;&rsaquo;&rsaquo;</h1> -->
       <h1 class="herounit__subhead">professional/amateur sleuth &middot; noir &middot; golden age &middot; paranormal &middot; cozy &middot; hardboiled pi</h1>
@@ -16,12 +16,21 @@ title: short-stories
 
   <section class="page-intro" id="page-intro">
   	<div class="container">
-  		<p>Everybody loves a good murder. Find a story, <em>below</em>, and see if you've got the chops to figure out whodunnit before the big reveal.</p>
+  		<p>Everybody loves a good murder. Choose your beat, find a story, <em>below</em>, and see if you've got the chops to figure out whodunit before the big reveal.</p>
 <!-- 	  	<h2>whatever your poison</h2>
 	  	<h4>professional sleuth &middot; cozy &middot; hardboiled pi &middot; amateur sleuth &middot; noir &middot; golden age</h4> 
 	  	<h2>we've got the cure!</h2> -->
 	  </div>
   </section>
+
+    <!-- README IF STATEMENT -->
+    {% if site.readtime %}
+      {% if site.wpm %}
+        {% assign readtime = page.wordcount | divided_by:site.wpm %}
+      {% else %}
+        {% assign readtime = page.wordcount | divided_by:180 %}
+      {% endif %}
+    {% endif %}
 
 	<section class="container">
 
