fixed redfile thank you page #2

--- a/thanks/theredfile/index.html
+++ b/thanks/theredfile/index.html
@@ -79,12 +79,12 @@ title: THE RED FILE | Thanks!
       <h3>Well, the confirmation email should be there by now!</h3>
       <p>Check your email (including your SPAM folder) &amp; confirm your subscription to be taken directly to the download page to get your (PDF, ePub or Kindle&#8209;ready) copy of PLANNED BY THE STARS. You're gonna love it!</p>
       <hr>
-      <!--<div class="specialnote">
+      <div class="specialnote">
         <img class="logo" src="/assets/img/circle_crow.png" alt="Tales of Murder logo">
         <h2>Welcome to the club!</h2>
         <p>And remember, if you have any questions, <a href="{{ site.url }}/about/#contactform">drop&nbsp;me&nbsp;a&nbsp;line</a>. &mdash;&nbsp;Atticus,&nbsp;the&nbsp;Murderous&nbsp;Crow</p>
       </div>
-       <p class="specialnote">I'm very exited that you've decided to join TalesofMurder.com. I'm sure you'll love my little murder mysteries! &mdash; Atticus</p> -->
+      <!-- <p class="specialnote">I'm very exited that you've decided to join TalesofMurder.com. I'm sure you'll love my little murder mysteries! &mdash; Atticus</p> -->
     </div>
   </section>
 
