redfile thank you page

--- a/thanks/theredfile/index.html
+++ b/thanks/theredfile/index.html
@@ -77,7 +77,7 @@ title: THE RED FILE | Thanks!
   <section class="checknow">
     <div class="container">
       <h3>Well, the confirmation email should be there by now!</h3>
-      <p>Check your email (including your SPAM folder) &amp; confirm your subscription to be taken directly to the download page to get your (PDF, ePub or Kindle&#8209;ready) copy of PLANNED BY THE STARS. You're gonna love it!</p>
+      <p>Go check your email (including your SPAM folder) &amp; confirm your subscription to be taken directly to the download page to get your (PDF, ePub or Kindle&#8209;ready) copy of PLANNED BY THE STARS. You're gonna love it!</p>
       <hr>
       <div class="specialnote">
         <img class="logo" src="/assets/img/circle_crow.png" alt="Tales of Murder logo">
