--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@ title: home
         <!-- <hr> -->
          
         <div class="expander">
-          <p class="expander__question">QUESTION&#58; What evidence did Captain Pearson see that proved Herman Matthews killed his wife?</p>
-          <p class="italic" style="background-color:#eee; padding:0.25rem 1rem; font-size:0.9rem; font-weight: bold;">Consider carefully because a correct answer qualifies you to become a <span style="text-transform:uppercase;">Detecive, 2nd Class</span> &amp; makes you eligible to receive <span style="color:darkred;">THE RED FILES</span>.</p>
-          <a href="#answer" id="js-expander-trigger" class="expander-trigger expander-hidden">Reveal the solution</a>
+          <p class="expander__question" id="question">QUESTION&#58;<br>What evidence did Captain Pearson see that proved Herman Matthews killed his wife?</p>
+          <!-- <p class="italic" style="background-color:#eee; padding:0.25rem 1rem; font-size:0.9rem; font-weight: bold;">Consider carefully because a correct answer qualifies you to become a <span style="text-transform:uppercase;">Detecive, 2nd Class</span> &amp; makes you eligible to receive <span style="color:darkred;">THE RED FILES</span>.</p> -->
+          <a href="#question" id="js-expander-trigger" class="expander-trigger expander-hidden" style="font-size:2rem;color:white;background-color:darkred;"><i class="fa fa-puzzle-piece"></i> Reveal solution <i class="fa fa-puzzle-piece"></i></a>
           <div id="js-expander-content" class="expander-content">
             <div class="expander__answer">
-              <p id="answer" style="color: $acolor;">ANSWER&#58; Who turned off the gas?</p>
+              <p id="answer" style="color: $acolor;">ANSWER&#58;<br>Who turned off the gas?</p>
               <p class="answer">The testimony of the milkman showed he never touched the tube or the gas cock. The patrolman took the tube from the girl’s mouth. If he didn’t turn it off, he must have seen it had been turned off.<br><br><strong>That left only Herman &mdash; who, by force of habit &mdash; had turned the gas off.</strong></p>
             </div> <!-- end div expander__answer -->
 
