--- a/short-stories/index.html
+++ b/short-stories/index.html
@@ -7,7 +7,7 @@ title: short-stories
 
   <section class="herounit">
     <div class="container">
-      <h1 class="h1 herounit__headline"><span class="slabtext">The Blotter</span>(Short Stories)</h1>
+      <h1 class="h1 herounit__headline"><span class="slabtext">Short Stories</span><em>aka, The Blotter</em></h1>
       <!-- <p class="herounit__subhead">Read something short.</p> -->
       <!-- <h1 class="herounit__subhead">&lsaquo;&lsaquo;&lsaquo;&nbsp;Read&nbsp;something&nbsp;short&nbsp;&rsaquo;&rsaquo;&rsaquo;</h1> -->
       <h1 class="herounit__subhead">professional/amateur sleuth &middot; noir &middot; golden age &middot; paranormal &middot; cozy &middot; hardboiled pi</h1>
