--- a/emails/welcome1.html
+++ b/emails/welcome1.html
@@ -10,7 +10,7 @@
 
 <h1 style="text-align:center;font-size:16px;color:darkgrey;letter-spacing:2px;">SUBJECT: Tales of Murder Operatives Dossier &amp; Special Instructions</h1>
 	
-	<table align="center" border="1" cellpadding="0" cellspacing="0" width="600" bgcolor="#FFFAF0" style="border-collaps: collapse;">
+	<table align="center" border="1" cellpadding="0" cellspacing="0" width="600" bgcolor="#fffAF0" style="border-collaps: collapse;">
 		
 		<tr> <!-- PREHEADER -->
 			<td bgcolor="#242424"  style="color:#f0f0f0;height:25px;padding-left:10px;font-size:13px;">
