--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: home
         <h4 class="h3" style="text-align:center; color:darkred;">to test your mettle as a detective</h4>
         <h3 class="squeeze__byline">By J. J. Matthews</h3>
         <p class="squeeze__lead"></p>
-        <h3 class="squeeze__headline">Are you savvy <wbr>enough&nbsp;to uncover the<wbr> clues&nbsp;before&nbsp;you<br><em><i class="fa fa-arrow-down"></i> click below <i class="fa fa-arrow-down"></i></em><br>to reveal the solution?</h3>
+        <h3 class="squeeze__headline">Are you smart <wbr>enough&nbsp;to uncover the<wbr> clues&nbsp;before&nbsp;you<br><em><i class="fa fa-arrow-down"></i> click below <i class="fa fa-arrow-down"></i></em><br>to reveal the solution?</h3>
       </header>
 
       <article class="squeeze__story">
