--- a/site-testing/index_test.html
+++ b/site-testing/index_test.html
@@ -1,6 +1,6 @@
 ---
 layout: blank
-title: test
+title: test 1
 ---
 
 <header class="site__header__test"> <!-- contains full width, resizing background image -->
@@ -10,17 +10,17 @@ title: test
 
 			<img src="/assets/img/circle_crow_paper.png" alt="" class="logo__test grit">
 
-			<div class="masthead-inner__test">
+			<div class="branding__test">
 				<h2 class="title__test grit"><span class="title-sub__test">Tales of </span><span class="title-main__test"><span class="m">m</span><span class="urde">urde</span><span class="r">r</span></span></h2>
 
 				<h3 class="tagline__test">For readers with time to <span>kill</span> &hellip;</h3>
 			</div> <!-- end div .masthead-inner__test -->
 
-			<div class="navicon__test toggle-menu menu-right">
-      	<i class="fa fa-navicon"></i>
-    	</div>
-
 		</div> <!-- end div .masthead__test -->
+
+		<div class="navicon__test toggle-menu menu-right">
+    	<i class="fa fa-navicon"></i>
+  	</div>
 
 		<nav  class="nav__primary cbp-spmenu cbp-spmenu-vertical cbp-spmenu-right">
 			<h1 class="hidden">MAIN NAV</h1>
