--- a/short-stories/index.html
+++ b/short-stories/index.html
@@ -10,13 +10,15 @@ title: short-stories
       <h1 class="h1 herounit__headline"><span class="slabtext">Short Stories</span></h1>
       <!-- <p class="herounit__subhead">Read something short.</p> -->
       <!-- <h1 class="herounit__subhead">&lsaquo;&lsaquo;&lsaquo;&nbsp;Read&nbsp;something&nbsp;short&nbsp;&rsaquo;&rsaquo;&rsaquo;</h1> -->
-      <h1 class="herounit__subhead">professional &amp; amateur sleuths &middot; noir &middot; golden age &middot; paranormal &middot; cozy &middot; hardboiled pi</h1>
+      <!-- <h1 class="herounit__subhead">professional &amp; amateur sleuths &middot; noir &middot; golden age &middot; adventure &middot; crook &middot; hardboiled&nbsp;pi </h1> -->
+      <h1 class="herounit__subhead">professional &amp; amateur sleuths &middot; damsels &amp; hardboiled pi's &middot; crooks &amp; killers &middot; little old ladies &amp; classic detectives</h1>
     </div> <!-- end div container -->
   </section> <!-- end section herounit -->
 
-  <section class="page-intro" id="page-intro">
+  <section class="page-intro" id="page-intro"> <!-- add search & sort in this section -->
   	<div class="container">
-  		<p>Everybody loves a good murder. Choose your beat, find a story, <em>below</em>, and see if you've got the chops to figure out whodunit before the big reveal.</p>
+  		<p><span>Everybody loves a good murder.</span></p>
+      <p>Choose your fav type of mystery story, <em>below</em>,<br> and see if you've got the chops to figure out whodunit before the big reveal.</p>
 <!-- 	  	<h2>whatever your poison</h2>
 	  	<h4>professional sleuth &middot; cozy &middot; hardboiled pi &middot; amateur sleuth &middot; noir &middot; golden age</h4> 
 	  	<h2>we've got the cure!</h2> -->
@@ -32,9 +34,7 @@ title: short-stories
       {% endif %}
     {% endif %}
 
-	<section class="container">
-
-		<!-- <h2 style="text-align: center">Pick a story. Read now, or save for later.</h2> -->
+	<section class="container card__container">
 
 		{% include card.html %}
 
