--- a/short-stories/index.html
+++ b/short-stories/index.html
@@ -22,8 +22,36 @@ title: short-stories
 <!-- 	  	<h2>whatever your poison</h2>
 	  	<h4>professional sleuth &middot; cozy &middot; hardboiled pi &middot; amateur sleuth &middot; noir &middot; golden age</h4> 
 	  	<h2>we've got the cure!</h2> -->
-	  </div>
-  </section>
+
+      <nav class="iso-filter">
+        <ul>
+          <li><a href="#" data-filter="*">All Genres</a></li>
+          <li><a href="#" class="selected" data-filter="#professional">Professional</a></li>
+          <li><a href="#" data-filter="#noir">Noir</a></li>
+          <li><a href="#" data-filter="#adventure">Adventure</a></li>
+          <li><a href="#" data-filter="#hood">Hood</a></li>
+          <li><a href="#" data-filter="#hardboiled">Hardboiled</a></li>
+        </ul>
+
+        <!-- <h2>Sort</h2> 
+          <div id="sorts" class="button-group">  <button class="button is-checked" data-sort-by="original-order">original order</button>
+            <button class="button" data-sort-by="genre">genre</button>
+            <button class="button" data-sort-by="author">author</button>
+            <button class="button" data-sort-by="title">title</button>
+            <button class="button" data-sort-by="length">length</button>
+          </div>-->
+
+       <!--  <select class="iso-filter">
+          <option><a href="#" data-filter="*">All Genres</a></option>
+          <option><a href="#" class="selected" data-filter="#professional">Professional</a></option>
+          <option><a href="#" data-filter="#noir">Noir</a></option>
+          <option><a href="#" data-filter="#adventure">Adventure</a></option>
+          <option><a href="#" data-filter="#hood">Hood</a></option>
+          <option><a href="#" data-filter="#hardboiled">Hardboiled</a></option>
+        </select> -->
+
+	  </div> <!-- end of div .container -->
+  </section> <!-- end of section .page-intro -->
 
     <!-- README IF STATEMENT -->
     {% if site.readtime %}
