--- a/downloads/short-stories/index.html
+++ b/downloads/short-stories/index.html
@@ -19,7 +19,7 @@ title: post download
 
 	<section class="page-intro">
 		<div class="container">
-			<p>Step 1&#058; Choose your preferred format<br>(Kindle, ePub 3.0, PDF)</p>
+			<p>Step 1&#058; Choose your preferred format:<br>(Kindle or ePub3)</p>
       <p>Step 2&#058; Click the appropriate button below&nbsp;the&nbsp;description.</p>
 		</div> <!-- end div.container -->
 	</section> <!-- end section.page-intro -->
@@ -56,12 +56,12 @@ title: post download
         </button>
       </a>
 
-      <a href="" id="pdf" class="ssactions__button__link">
+      <!-- <a href="" id="pdf" class="ssactions__button__link">
         <button class="ssactions__button" id="PDF__download" type="button" label="PDF version">
           <span class="icon"><i class="fa fa-file-pdf-o fa-lg"></i></span>
           <span class="label">PDF</span>
         </button>
-      </a>
+      </a> -->
     </div> <!-- end div container -->
   </section> <!-- end of section downloads -->
 
