--- a/thanks/theredfile/index.html
+++ b/thanks/theredfile/index.html
@@ -13,20 +13,22 @@ title: THE RED FILE | Thanks!
 
   <section class="page-intro">
     <div class="container">
-      <h2><i class="fa fa-download fa-lg"></i> Your FREE downloadable edition of PLANNED BY THE STARS is&nbsp;being&nbsp;prepared</h2>
-      <p><em>but before you download it, I need to you do a few little things for me &hellip;</em></p>
+      <h2><i class="fa fa-download fa-lg"></i> Your FREE ereader edition of<br><span style="background-color:darkred;padding:0.65rem 0.65rem 0 0.65rem;">[FREEBIE STORY TITLE]</span><br>has&nbsp;been&nbsp;prep'd &amp; emailed to you, BUT &hellip;</h2>
+      <p><em>before you download it, I need to you do a few little things for me &hellip;</em></p>
     </div>
   </section>
 
   <section class="thanks__instructions">
     <div class="container">
       <h2 class="huge">First &hellip;</h2>
-      <p>Check your email for a message from <em>Atticus@TalesofMurder.com</em> with the subject <strong>"THE RED FILE&#058; Please Confirm Subscription"</strong> &mdash; <small>(note that it may take 10&#8208;15 mins to arrive, depening on, well, on the 'net and its mood!)</small></p>
+      <p>Watch your email for a message from <em>Atticus@TalesofMurder.com</em> with the subject <strong>"THE RED FILE&#058; Please Confirm Subscription"</strong> &mdash; <small>(note that it may take 10&#8208;15 mins to arrive, depening on, well, on the 'net and its mood!)</small></p>
       <br>
       <h2 class="huge">Second &hellip;</h2>
-      <p>Click the green button that says, "Yes, subscribe me to this list. When you click that green button, you'll be added to list to receive THE RED FILE, my weekly digest email newsletter (details below).</p>
+      <p>Click the green button that says, "Yes, subscribe me to this list!" When you click that green button, you'll be added to list to receive THE RED FILE, my weekly digest email newsletter (details below).</p>
+      <p>As soon as you confirm your subscription (which you can cancel anytime!), your copy of [FREEBIE STORY TITLE] will immediately be sent out. Watch for an email with a subject line that says, "<span style="color: darkred;">YOUR FREE MURDER MYSTERY NOVELETTE &hellip; [FREEBIE STORY TITLE]</span>". Then just click the download button, load onto your device, sit back &amp; prepare to be thrilled!</p>
     
       <div class="smallprint">
+        <h4 style="text-align: center;">THE SMALL PRINT</h4>
         <p>I require this "double opt&#8208;in" to&#058;</p>
         <ul class="doubleO">
            <li>protect you from nefarious evildoers who might add your email address without your premission!</li>
@@ -51,21 +53,23 @@ title: THE RED FILE | Thanks!
       <ul class="subscriber__goodies">
         <li>2 subscriber&#8209;only stories &hellip; each at least a 30&#8209;minute read</li>
         <li>10 shorter stories &hellip; available to you a week before they're released on the site!</li>
+        <li>more being added each week!</li>
+        
+        <!-- ADD THE FOLLOWING TO THE LIST ONCE THEY'RE READY!
         <li>Definition of the Week ... 'cause you want to know what a <em>flivver</em> is, right!?</li>
         <li>Author bios ... to help you find new obsessions <i class="fa fa-smile-o"></i></li>
         <li>Special offers ... exclusive subscriber&#8209;only deals!</li>
         <li>General site news &amp; updates.</li>
+        END OF "ADD TO LIST" -->
+
       </ul>
       <h3>Every week, simply&#058;</h3>
       <ul class="openemail fa-ul">
-        <li><i class="fa-li fa fa-check-circle"></i>Open the email &hellip;</li>
-        <li><i class="fa-li fa fa-check-circle"></i>Choose on of the thrilling stories &hellip;</li>
-        <li><i class="fa-li fa fa-check-circle"></i>Click to go <em>directly</em> to that page &amp; read &hellip;</li>
-        <li><i class="fa-li fa fa-check-circle"></i>Return to the email to find another thriller!!</li>
+        <li><i class="fa-li fa fa-check-circle"></i><span>Open</span> the email &hellip;</li>
+        <li><i class="fa-li fa fa-check-circle"></i><span>Review</span> the list of thrilling stories in this issue &hellip;</li>
+        <li><i class="fa-li fa fa-check-circle"></i><span>Click</span> the DOWNLOAD ISSUE button to go <em>directly</em> to the issue download page &hellip;</li>
+        <li><i class="fa-li fa fa-check-circle"></i><span>Download</span> to your fav ereader doodad &amp; enjoy 100&#45;plus pages of exciting murder mystery thrillers!!</li>
       </ul>
-      <br>
-      <h4>Or,</h4>
-      <p>Click the <span>DOWNLOAD ISSUE</span> link at the top of every issue to download the entire issue to read on your favorite e&#8209;reader doodad.</p>
 
     </div>
 
@@ -77,7 +81,7 @@ title: THE RED FILE | Thanks!
   <section class="checknow">
     <div class="container">
       <h3>Well, the confirmation email should be there by now!</h3>
-      <p>Go check your email (including your SPAM folder) &amp; confirm your subscription to be taken directly to the download page to get your (PDF, ePub or Kindle&#8209;ready) copy of PLANNED BY THE STARS. You're gonna love it!</p>
+      <p>Go check your email (including your SPAM folder) &amp; confirm your subscription to be taken directly to the download page to get your (PDF, ePub or Kindle&#8209;ready) copy of [FREEBIE STORY TITLE]. You're gonna love it!</p>
       <hr>
       <div class="specialnote">
         <img class="logo" src="/assets/img/circle_crow.png" alt="Tales of Murder logo">
