fix width error in mobile menu

--- a/the-red-file/index.html
+++ b/the-red-file/index.html
@@ -20,7 +20,9 @@ title: the-red-file-archive
 	  </div>
   </section>
 
- 	<section class="container" style="border-top:2px solid darkred;border-bottom:2px solid darkred;padding: 1rem;max-width:800px;margin-bottom:3rem;height:1000px;">
+ 	<section class="container" >
+
+  <!-- style="border-top:2px solid darkred;border-bottom:2px solid darkred;padding: 1rem;max-width:800px;margin-bottom:3rem;height:1000px;" -->
 
 		<p>Click to download the issue (subscription required) or hover/tap to view the Table of Contents.</p>
 
