added collections, gen cleanup

--- a/short-stories/index.html
+++ b/short-stories/index.html
@@ -56,21 +56,21 @@ title: short-stories
 
 	</section> <!-- end section .container .card__container --> 
 
-  <!-- <div class="pagination__nav container">
+ <div class="pagination__nav container">
     
     <ul>
-      <li> -->
+      <li>
         <!-- if previous page -->
-        <!-- {% if paginator.previous_page %}
+        {% if paginator.previous_page %}
           <span class="previous"><a rel="prev" href="{{ paginator.previous_page_path }}">&laquo; Previous Stories</a></span>
         {% else %}
           <span class="previous previous__none">First Page</span>
         {% endif %}
       </li>
 
-      <li> -->
+      <li>
         <!-- if next page -->
-       <!--  {% if paginator.next_page %}
+        {% if paginator.next_page %}
           <span class="next"><a rel="next" href="{{ paginator.next_page_path }}">Next Stories &raquo;</a></span>
         {% else %}
           <span class="next next__none">Last Page</span>
@@ -78,7 +78,7 @@ title: short-stories
       </li>
     </ul>
 
-  </div> --> <!-- end div .pagination__nav -->
+  </div> <!-- end div .pagination__nav -->
   
 </div> <!-- end div short-stories -->
 
