copyedits, contact form fixes

--- a/thanks/contact-form/index.html
+++ b/thanks/contact-form/index.html
@@ -26,22 +26,31 @@ title: Thanks for hollerin'
 
       <p>Rest assured, your message is safe and will only be opened by your's truly. And I won't share it with anyone. Consider it under the <em>Client/Detective Protected Priviledge!</em></p>
 
-      <p>And, again, you're email address is safe. I'll only use it to respond but won't send you anything else, like my free weekly email newsletter that gives you advanced readership of all content on TalesofMurder.com, plus exclusive subscriber content. Hint, hint!</p>
+      <p>And, again, you're email address is safe. I'll only use it to respond but won't send you anything else, like my free weekly email newsletter that gives you advanced readership of all content on TalesofMurder.com, plus exclusive subscriber content. <em>Hint, hint! (see below)</em></p>
 
-      <p>You can sign up for that little bit of extra special goodies, below!</p>
+       <p>Or just check out a good story. Guaranteed to keep you guessing &hellip;</p>
 
-      <p><strong>[SIGN UP FORM HERE]</strong></p>
+      <p style="font-size:1.5rem;"><a href="/short-stories/#page-intro">Click here to READ&nbsp;A MURDER&nbsp;MYSTERY &hellip; now!</a></p>
 
-      <p>Or just check out a good story. Guaranteed to keep you guessing &hellip;</p>
+      <p>Or sign up to receive <span class="bloodied">THE RED FILE</span> and get a free gift.</p>
 
-     <!--  <p style="font-size:1.5rem;text-align:center"><a href="/short-stories/#page-intro">READ&nbsp;A MURDER&nbsp;MYSTERY</a></p> -->
+      <div class="basic__signupform" style="background-color: darkred;padding:1rem;margin:1rem;width:340px;">
+        {% include MC_form4.html %}
+      </div> <!-- end div .basic__signupform -->
+  
+      <div>
+        <p class="small"><br><i class="fa fa-lock"></i>&nbsp;Your email is securely locked away from prying eyes.<br>I NEVER sell out your <a href="{{ site.url }}/about/#policies" style="color:#fff;text-decoration:underline;">privacy</a>.</p>
+        <p class="small"><em>For entertainment purposes only.</em></p>
+      </div>
 
-     <a href="/short-stories/#page-intro" class="readmore__button__link" style="color:$acolor;text-align:center;">
+     
+
+     <!-- <a href="/short-stories/#page-intro" class="readmore__button__link" style="color:$acolor;text-align:center;">
         <button class="ssactions__button" id="readmore" type="button" label="Choose Another Short Story">
           <span class="icon"><i class="fa fa-book"></i></span>
           <span class="label">Read More</span>
         </button>
-      </a>
+      </a> -->
 
     </div> <!-- end div .container -->
   </section> <!-- end of section thanks__instructions -->
