--- a/thanks/theredfile/index.html
+++ b/thanks/theredfile/index.html
@@ -12,8 +12,8 @@ title: THE RED FILE | Thanks!
   </section>
 
   <section class="page-intro">
-    <div class="container">
-      <h2><i class="fa fa-download fa-lg"></i> Your FREE ereader edition of<br><span style="background-color:darkred;padding:0.65rem 0.65rem 0 0.65rem;">The Campaign for Vengence</span><br> has&nbsp;been&nbsp;prep'd &amp; emailed to you, BUT &hellip;</h2>
+    <div class="inner-container">
+      <h2><i class="fa fa-download fa-lg"></i> Your FREE ereader edition of<br><span style="text-transform: uppercase; background-color:darkred;padding:0.65rem 0.65rem 0 0.65rem;">The Campaign for&nbsp;Vengence</span><br> has&nbsp;been&nbsp;prep'd &amp; emailed to you, BUT &hellip;</h2>
       <p><em>before you download it, I need to you do a few little things for me &hellip;</em></p>
     </div>
   </section>
