spelling error fix

--- a/thanks/theredfile/index.html
+++ b/thanks/theredfile/index.html
@@ -21,7 +21,7 @@ title: THE RED FILE | Thanks!
   <section class="thanks__instructions">
     <div class="container">
       <h2 class="huge">First &hellip;</h2>
-      <p>Watch your email for a message from <em>Atticus@TalesofMurder.com</em> with the subject <strong>"THE RED FILE&#058; Please Confirm Subscription"</strong> &mdash; <small>(note that it may take 10&#8208;15 mins to arrive, depening on, well, on the 'net and its mood!)</small></p>
+      <p>Watch your email for a message from <em>Atticus@TalesofMurder.com</em> with the subject <strong>"THE RED FILE&#058; Please Confirm Subscription"</strong> &mdash; <small>(note that it may take 10&#8208;15 mins to arrive, depending on, well, on the 'net and its mood!)</small></p>
       <br>
       <h2 class="huge">Second &hellip;</h2>
       <p>Click the green button that says, "Yes, subscribe me to this list!" When you click that green button, you'll be added to list to receive THE RED FILE, my weekly digest email newsletter (details below).</p>
