--- a/thanks/theredfile/index.html
+++ b/thanks/theredfile/index.html
@@ -25,13 +25,13 @@ title: THE RED FILE | Thanks!
       <br>
       <h2 class="huge">Second &hellip;</h2>
       <p>Click the green button that says, "Yes, subscribe me to this list!" When you click that green button, you'll be added to list to receive THE RED FILE, my weekly digest email newsletter (details below).</p>
-      <p>As soon as you confirm your subscription (which you can cancel anytime!), your copy of [FREEBIE STORY TITLE] will immediately be sent out. Watch for an email with a subject line that says, "<span style="color: darkred;">YOUR FREE MURDER MYSTERY NOVELETTE &hellip; [FREEBIE STORY TITLE]</span>". Then just click the download button, load onto your device, sit back &amp; prepare to be thrilled!</p>
+      <p>As soon as you confirm your subscription (which you can cancel anytime!), your copy of [FREEBIE STORY TITLE] will immediately be sent out. Watch for an email with a subject line that says, "<span style="color: darkred;">YOUR FREE MURDER MYSTERY NOVELETTE &hellip; THE CAMPAIGN FOR VENGENCE</span>". Then just click the download button, load onto your device, sit back &amp; prepare to be thrilled!</p>
     
       <div class="smallprint">
         <h4 style="text-align: center;">THE SMALL PRINT</h4>
         <p>I require this "double opt&#8208;in" to&#058;</p>
         <ul class="doubleO">
-           <li>protect you from nefarious evildoers who might add your email address without your premission!</li>
+           <li>protect you from nefarious evildoers who might add your email address without your permission!</li>
            <li>make sure that the email address you entered is correct.</li>
         </ul>
         <p>If you don't confirm your subscription, I cannot send you want you asked for. I want to protect you, my other readers and the site, itself. I hope you understand. Besides, its just a click!</p>
@@ -81,7 +81,7 @@ title: THE RED FILE | Thanks!
   <section class="checknow">
     <div class="container">
       <h3>Well, the confirmation email should be there by now!</h3>
-      <p>Go check your email (including your SPAM folder) &amp; confirm your subscription to be taken directly to the download page to get your (PDF, ePub or Kindle&#8209;ready) copy of [FREEBIE STORY TITLE]. You're gonna love it!</p>
+      <p>Go check your email (including your SPAM folder) &amp; confirm your subscription to be taken directly to the download page to get your (PDF, ePub or Kindle&#8209;ready) copy of THE CAMPAIGN FOR VENGENCE. You're gonna love it!</p>
       <hr>
       <div class="specialnote">
         <h2>Welcome to the club!</h2>
