--- a/downloads/short-stories/index.html
+++ b/downloads/short-stories/index.html
@@ -19,7 +19,7 @@ title: post download
 
 	<section class="page-intro">
 		<div class="container">
-			<p>Step 1&#058; Choose your preferred format:<br>(Kindle or ePub3)</p>
+			<p>Step 1&#058; Choose your preferred format&#058;<br>(Kindle or ePub3)</p>
       <p>Step 2&#058; Click the appropriate button below&nbsp;the&nbsp;description.</p>
 		</div> <!-- end div.container -->
 	</section> <!-- end section.page-intro -->
