add Netlify article

--- a/murderwiki/index.html
+++ b/murderwiki/index.html
@@ -8,10 +8,18 @@ title: murderwiki
   <section class="herounit">
     <div class="container">
       <h1 class="h1 herounit__headline">MurderWiki&trade;</h1>
-      <!-- <h1 class="herounit__subhead">&lsaquo;&lsaquo;&lsaquo; Read about murder mysteries &rsaquo;&rsaquo;&rsaquo;</h1> -->
-      <!-- <i class="fa fa-arrow-circle-down fa-3x"></i> -->
+      <h2 class="herounit__subhead">&lsaquo;&lsaquo;&lsaquo; Read about murder mysteries &rsaquo;&rsaquo;&rsaquo;</h2>
+      <i class="fa fa-arrow-circle-down fa-3x"></i>
       </div> <!-- end div container -->
   </section> <!-- end section herounit -->
 
-  
+  <section class="blogposts">
+  <section class="container card__container">
+
+    {% include card_mw.html %}
+
+  </section> <!-- end section .container .card__container -->
+  </section> <!-- end section .blogposts -->
+
+
 </div> <!-- end div homepage -->
